Added new MessageController methods
