# app/Http/Controllers/MessageController.php
@@ -17,9 +17,89 @@ class MessageController extends Controller
      * )
      */
     public function index() {
-        $messages = Message::paginate(25);
+        $messages = Message::all();
         return response()->json($messages, 200,
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+    }
+
+    /**
+     * @OA\Get(
+     *     tags={"Message"},
+     *     path="/api/message/getHead",
+     *     @OA\Parameter(
+     *         name="sort_by",
+     *         in="query",
+     *         description="Column to sort by (user_name, user_email, created_at)",
+     *         required=false,
+     *         @OA\Schema(type="string", enum={"user_name", "user_email", "created_at"})
+     *     ),
+     *     @OA\Parameter(
+     *         name="sort_order",
+     *         in="query",
+     *         description="Sorting order (asc or desc)",
+     *         required=false,
+     *         @OA\Schema(type="string", enum={"asc", "desc"})
+     *     ),
+     *     @OA\Response(response="200", description="Messages")
+     * )
+     */
+    public function getHead(Request $request) {
+        $validSortColumns = ['user_name', 'user_email', 'created_at'];
+
+        $sortColumn = $request->input('sort_by', 'created_at');
+        if (!in_array($sortColumn, $validSortColumns)) {
+            $sortColumn = 'created_at';
+        }
+
+        $sortOrder = $request->input('sort_order', 'desc');
+
+        $headers = Message::with('user')
+            ->leftJoin('users', 'messages.user_id', '=', 'users.id')
+            ->select('messages.*', 'users.name as user_name', 'users.email as user_email')
+            ->whereNull('messages.parent_id')
+            ->orderBy($sortColumn, $sortOrder)
+            ->paginate(25);
+
+        return response()->json($headers, 200, [
+            'Content-Type' => 'application/json;charset=UTF-8',
+            'Charset' => 'utf-8'
+        ], JSON_UNESCAPED_UNICODE);
+    }
+
+    /**
+     * @OA\Get(
+     *     tags={"Message"},
+     *     path="/api/message/getByParent/{parent_id}",
+     *     @OA\Parameter(
+     *         name="parent_id",
+     *         in="path",
+     *         description="Parent message id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Messages by Parent ID"),
+     *     @OA\Response(
+     *        response=404,
+     *        description="Parent message not found",
+     *        @OA\JsonContent(
+     *           @OA\Property(property="message", type="string", example="Parent message not found")
+     *        )
+     *     )
+     * )
+     */
+    public function getByParentId($parent_id) {
+        $messages = Message::with('user')
+            ->where('parent_id', $parent_id)
+            ->orderBy('created_at', 'desc')
+            ->get();
+
+        return response()->json($messages, 200, [
+            'Content-Type' => 'application/json;charset=UTF-8',
+            'Charset' => 'utf-8'
+        ], JSON_UNESCAPED_UNICODE);
     }
 
     /**
@@ -111,7 +191,7 @@ class MessageController extends Controller
                 $resizedImage = Image::make($image)->resize($size, null, function ($constraint) {
                     $constraint->aspectRatio();
                 })->encode();
-                $path = public_path('uploads/' . $fileSave);
+                $path = public_path('storage/uploads/' . $fileSave);
                 file_put_contents($path, $resizedImage);
             }
             $input['image'] = $filename;
@@ -163,7 +243,7 @@ class MessageController extends Controller
      */
     public function update($id, Request $request)
     {
-        $messaage = Message::findOrFail($id);
+        $message = Message::findOrFail($id);
         $input = $request->all();
         $message = array(
             'user_id.required'=>"Enter userId for message",
@@ -184,8 +264,8 @@ class MessageController extends Controller
             $filename = uniqid() . '.' . $image->getClientOriginalExtension();
             $sizes = [50, 150, 300, 600, 1200];
             foreach ($sizes as $size) {
-                $fileDelete = $size.'_'.$messaage->image;
-                $removePath = public_path('uploads/' . $fileDelete);
+                $fileDelete = $size.'_'.$message->image;
+                $removePath = public_path('storage/uploads/' . $fileDelete);
                 if (file_exists($removePath)) {
                     unlink($removePath);
                 }
@@ -197,17 +277,17 @@ class MessageController extends Controller
                 $resizedImage = Image::make($image)->resize($size, null, function ($constraint) {
                     $constraint->aspectRatio();
                 })->encode();
-                $path = public_path('uploads/' . $fileSave);
+                $path = public_path('storage/uploads/' . $fileSave);
                 file_put_contents($path, $resizedImage);
             }
             $input['image'] = $filename;
         }
         else {
-            $input['image'] = $messaage->image;
+            $input['image'] = $message->image;
         }
 
-        $messaage->update($input);
-        return response()->json($messaage, 200,
+        $message->update($input);
+        return response()->json($message, 200,
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
 
@@ -243,7 +323,7 @@ class MessageController extends Controller
         $sizes = [50, 150, 300, 600, 1200];
         foreach ($sizes as $size) {
             $fileDelete = $size.'_'.$message->image;
-            $removePath = public_path('uploads/' . $fileDelete);
+            $removePath = public_path('storage/uploads/' . $fileDelete);
             if (file_exists($removePath)) {
                 unlink($removePath);
             }
